src/test/ui/kindck/kindck-inherited-copy-bound.stderr
error[E0277]: the trait bound `std::boxed::Box<{integer}>: std::marker::Copy` is not satisfied
  --> $DIR/kindck-inherited-copy-bound.rs:18:5
   |
LL |     take_param(&x);
   |     ^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `std::boxed::Box<{integer}>`
   |
   = note: required because of the requirements on the impl of `Foo` for `std::boxed::Box<{integer}>`
note: required by `take_param`
  --> $DIR/kindck-inherited-copy-bound.rs:14:1
   |
LL | fn take_param<T:Foo>(foo: &T) { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0038]: the trait `Foo` cannot be made into an object
  --> $DIR/kindck-inherited-copy-bound.rs:24:19
   |
LL |     let z = &x as &dyn Foo;
   |                   ^^^^^^^^ the trait `Foo` cannot be made into an object
   |
   = note: the trait cannot require that `Self : Sized`

error[E0038]: the trait `Foo` cannot be made into an object
  --> $DIR/kindck-inherited-copy-bound.rs:24:13
   |
LL |     let z = &x as &dyn Foo;
   |             ^^ the trait `Foo` cannot be made into an object
   |
   = note: the trait cannot require that `Self : Sized`
   = note: required because of the requirements on the impl of `std::ops::CoerceUnsized<&dyn Foo>` for `&std::boxed::Box<{integer}>`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0038, E0277.
For more information about an error, try `rustc --explain E0038`.
